@@ -10,6 +10,7 @@ Nothing
 
 6.13.02: (Not released yet).
 [FIXED]Titanium Niobium Carbide Gas and Engine Turbine Main Housing recipes use Dense Titanium Niobium Carbide Wall 
+[ADDED]Gas Oil now can be Burned or put in Engine
 [WIP]
 MultyBlock Particle Collider.Build like fusion reactor.
 Now you can build it but its purpose will be added in the future.
